# mipt-mp

./: .gitignore  CMakeLists.txt  main.cpp
base-gol/: CMakeLists.txt
base-gol/include/: base_gol.h  utils.h
base-gol/src/: base_gol.cpp  utils.cpp
base-gol/test/: base_gol_test.cpp
gameoflife/: CMakeLists.txt
gameoflife/include/: gameoflife.h  utils.h
gameoflife/src/: gameoflife.cpp
gameoflife/test/: gameoflife_test.cpp
mpi-gameoflife/: CMakeLists.txt
mpi-gameoflife/include/: mpi_gameoflife.h
mpi-gameoflife/src/: main.cpp  mpi_gameoflife.cpp
mpi-gol/: .gitignore  CMakeLists.txt
mpi-gol/include/: mpi_gol.h
mpi-gol/src/: main.cpp  mpi_gol.cpp
omp-gameoflife/: CMakeLists.txt
omp-gameoflife/include/: omp_gameoflife.h
omp-gameoflife/src/: omp_gameoflife.cpp
omp-gameoflife/test/: omp_gameoflife_test.cpp
omp-gol/: CMakeLists.txt
omp-gol/include/: omp-gol.h  omp_gol.h
omp-gol/src/: main.c  main.cpp  omp-gol.c  omp-gol.cpp  omp_gol.cpp
omp-gol/test/: CMakeLists.txt  input.txt  omp_gol_test.cpp
src/: main.cpp
